--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Xavier Horwood"
+  "author": "Xavier Horwood",
+  "dependencies": {}
 }
