--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "to convert bot.txt to list",
   "main": "index.js",
   "scripts": {
-    "create": "tsc index.ts && node ."
+    "create": "npm i && tsc index.ts && node ."
   },
   "keywords": [],
   "author": "Xavier Horwood",
